<resources>
    <string name="app_name">Setting</string>
    <string name="setting">Setting</string>
    <string name="setting_network">Network</string>
    <string name="setting_network_wifi">Wifi</string>
    <string name="setting_network_bt">BT(2.4GHz Wireless)</string>
    <string name="setting_power">Power</string>
    <string name="setting_power_auto_sleep">Auto Sleep Timeout</string>
    <string name="setting_power_auto_power_off">Auto Power Off Timeout</string>
    <string name="setting_power_manage">Power Manage</string>
    <string name="setting_hall_wake_title">Auto wake-up by the Case</string>
    <string name="setting_hall_wake_description">Wake from sleep automatically when the case cover is opened.</string>
    <string name="setting_hall_sleep_title">Auto Sleep by the Case</string>
    <string name="setting_hall_sleep_description">Enter sleep mode automatically when the case cover is closed.</string>
    <string name="setting_pause_music_title">Audio close after into sleep mode</string>
    <string name="setting_pause_music_description">When it enters sleep mode, the audio turns off.</string>
    <string name="setting_display">Display</string>
    <string name="setting_display_refresh">Refresh</string>
    <string name="setting_display_poi">Power Off Image</string>
    <string name="setting_display_poi_default">Default Image</string>
    <string name="setting_display_poi_user">User Image</string>
    <string name="setting_display_si">Sleep Image</string>
    <string name="setting_display_default_image">Default Image</string>
    <string name="setting_display_si_user">User Image</string>
    <string name="setting_display_current_screen">Current Screen</string>
    <string name="setting_display_current_screen_warning">The current screen enters sleep mode as it is, and icons are displayed at the top.</string>
    <string name="setting_display_select_image">Select Image</string>
    <string name="setting_display_apply">Apply</string>
    <string name="setting_display_applied">Applied</string>
    <string name="setting_display_home_screen_style">Home Screen Style</string>
    <string name="setting_display_widget_text">Home Widget Text</string>
    <string name="setting_display_widget_setting">Widget Setting</string>
    <string name="setting_light">Light</string>
    <string name="setting_language_and_keyboard">Language &amp; Keyboard</string>
    <string name="setting_language_and_keyboard_km">Keyboard Management</string>
    <string name="setting_date_and_time">Date &amp; Time</string>
    <string name="setting_date_and_time_tz">Time Zone</string>
    <string name="setting_lock_screen">Lock Screen</string>
    <string name="setting_task_manager">Task Manager</string>
    <string name="setting_device">Device</string>
    <string name="setting_device_info">Device Info</string>
    <string name="setting_device_license">Open License Info</string>
    <string name="setting_device_certification_info">Device Certification Info</string>
    <string name="setting_device_system_update">System Update</string>
    <string name="setting_device_app_update">App Update</string>
    <string name="setting_device_reset">Factory Reset</string>
    <string name="setting_device_gsf_id">GSF ID</string>
    <string name="setting_key_and_gesture">Key &amp; Gesture</string>
    <string name="setting_key_setting">Key Setting</string>
    <string name="setting_gesture_setting">Gesture Setting</string>
    <string name="setting_physical_key_setting">Physical Key Setting</string>
    <string name="setting_physical_reverse">Reverse</string>
    <string name="setting_physical_key_page">Page turn(Previous page / Next page)</string>
    <string name="setting_physical_key_volume">Volume(+ / -)</string>
    <string name="setting_physical_key_dpad">DPAD(Left / Right)</string>
    <string name="setting_inno_key_setting">INNOKEY Setting</string>
    <string name="setting_keypack_setting">KeyPack Setting</string>
    <string name="setting_bottom_gesture">Bottom Gesture</string>
    <string name="setting_side_gesture">Side Gesture</string>
    <string name="setting_left_side_gesture">Left Side Gesture</string>
    <string name="setting_right_side_gesture">Right Side Gesture</string>
    <string name="setting_light_gesture">Light Gesture</string>
    <string name="setting_keypack_gesture">KeyPack Gesture</string>
    <string name="setting_keypack_information">KeyPack information</string>
    <string name="setting_gesture_function_selection">Function Selection</string>
    <string name="gesture_back">Back</string>
    <string name="gesture_home">Home</string>
    <string name="gesture_refresh">Refresh</string>
    <string name="gesture_task_manager">Task Manager</string>
    <string name="gesture_eink_center">E-ink Center</string>
    <string name="gesture_key_setting">Key Setting</string>
    <string name="gesture_user_app">Specific User App</string>
    <string name="gesture_none">None</string>
    <string name="settings_ok">OK</string>
    <string name="settings_cancel">Cancel</string>
    <string name="power_2min">2 minutes</string>
    <string name="power_5min">5 minutes</string>
    <string name="power_10min">10 minutes</string>
    <string name="power_15min">15 minutes</string>
    <string name="power_20min">20 minutes</string>
    <string name="power_30min">30 minutes</string>
    <string name="power_60min">60 minutes</string>
    <string name="power_1hour">1 hour</string>
    <string name="power_2hour">2 hours</string>
    <string name="power_8hour">8 hours</string>
    <string name="power_1day">1 day</string>
    <string name="power_2day">2 days</string>
    <string name="power_none">None</string>
    <string name="refresh_none">None</string>
    <string name="refresh_1view">1 View</string>
    <string name="refresh_5view">5 View</string>
    <string name="refresh_10view">10 View</string>
    <string name="refresh_15view">15 View</string>
    <string name="refresh_20view">20 View</string>
    <string name="light_setting">Light Setting</string>
    <string name="light_brightness">Brightness</string>
    <string name="light_color_temperature">Color Temperature</string>
    <string name="task_memory_usage">Memory Usage : %1$s</string>
    <string name="task_choose">Choose</string>
    <string name="task_all_clean">All Clean</string>
    <string name="language_setting">Language Setting</string>
    <string name="language_ko">한국어</string>
    <string name="language_en">English</string>
    <string name="keyboard_setting">Keyboard Setting</string>
    <string name="keyboard_msg">Default keyboard can not disable</string>
    <string name="time_setting">Date &amp; Time Setting</string>
    <string name="time_auto_time">Automatic Date &amp; Time</string>
    <string name="time_use_network_time">Use Network Time</string>
    <string name="time_set_date">Set Date</string>
    <string name="time_set_time">Set Time</string>
    <string name="time_use_24_format">Use 24-hour Format</string>
    <string name="time_am">AM</string>
    <string name="time_pm">PM</string>
    <string name="time_select_timezone">Select Time Zone</string>
    <string name="def_image_apply">Apply</string>
    <string name="power_user_no_image">
        <![CDATA[
        <p>Please connect to your desktop
        <br>and copy image files to <b>PowerOff</b> folder
        <br>or <b>INNOS</b> folder(in <b>Download</b> folder).
        <br><b>PNG, BMP, JPG</b> files can be used for PowerOff image.</p>
        <p>Optimized resolution is <b>1264 X 1680</b>
        ]]>
    </string>
    <string name="sleep_user_no_image">
        <![CDATA[
        <p>Please connect to your desktop
        <br>and copy image files to <b>Sleep</b> folder
        <br>or <b>INNOS</b> folder(in <b>Download</b> folder).
        <br><b>PNG, BMP, JPG</b> files can be used for sleep image.</p>
        <p>Optimized resolution is <b>1264 X 1680</b>
        ]]>
    </string>
    <string name="user_image_setting">User Image Setting</string>
    <string name="user_image_fit_center">Fit Center</string>
    <string name="user_image_center_crop">Center Crop</string>
    <string name="user_image_rotate">Rotate</string>
    <string name="user_image_rotate_reverse">Rotate Reverse</string>
    <string name="set_image_successfully">Set Image Successfully</string>
    <string name="home_screen_widget_setting">Widget Setting</string>
    <string name="home_screen_widget_setting_describe1">When Wifi is ON Search bar and notification message are exposed. Get notifications of the latest updates and more right away!</string>
    <string name="home_screen_widget_setting_describe2">Widget settings are available only when a widget style is selected.</string>
    <string name="home_screen_widget_style">Widget Style</string>
    <string name="home_screen_default_style">Default App Style</string>
    <string name="home_background_setting">Home Background Setting</string>
    <string name="home_background">Home Background</string>
    <string name="home_background_alpha_setting">Home Background Alpha Setting</string>
    <string name="transparency">transparency</string>
    <string name="reset_home_background_setting">Home Background Reset</string>
    <string name="msg_reset_home_background_setting">Home Background will be reset.\nAre you sure you want to reset it?\n</string>
    <string name="widget_text">Home Widget Text</string>
    <string name="widget_text_change">Home Widget Text Setting</string>
    <string name="widget_text_default">Default Text</string>
    <string name="widget_text_dialog_describe">Max 3 lines,75 characters</string>
    <string name="widget_text_dialog_et_hint">Enter here to add a widget text</string>
    <string name="title_search_alarm">Search &amp; Alarm</string>
    <string name="desc_search_alarm_on">
        When Wifi is ON, Search bar and notification message are exposed.
        Get notifications of the latest updates and more right away!
    </string>
    <string name="desc_search_alarm_off">
        Search and alarm settings are available only when a widget style is selected.
    </string>
    <string name="title_bottom_pinned_app">Bottom pinned apps</string>
    <string name="desc_bottom_pinned_app">Pin up to 5 apps to the bottom of home screen.</string>
    <string name="title_left_slide">Left slide function</string>
    <string name="sub_title_static_specific_app">Static specific app</string>
    <string name="sub_title_recent_books">Recent books</string>
    <string name="device_info_system_version">System version</string>
    <string name="device_info_android_version">Android version</string>
    <string name="device_info_model_number">Model Number</string>
    <string name="device_info_serial_number">Serial Number</string>
    <string name="device_info_battery">Battery Info</string>
    <string name="device_info_storage">Storage Info</string>
    <string name="device_info_sd">SDCard Info</string>
    <string name="device_info_license">Open License Info</string>
    <string name="factory_reset_dialog_msg">Are you sure you want to reset device?\nData recovery is impossible after reset.</string>
    <string name="kc_certification_no">KC 전파인증 : R-R-EWG-SPC07009J</string>
    <string name="kc_battery_certification_no">KC 배터리인증 : XU100323-26009</string>
    <string name="kc_electrical_safety_confirmation_no">KC 안전확인 : XU104287–26001</string>
    <string name="kc_device_name">Device Name : Mars A</string>
    <string name="kc_model">Model : SPC07009J</string>
    <string name="kc_manufacturer_iwg">Manufacturer : IWG</string>
    <string name="kc_importer_iwg">Importer : IWG</string>
    <string name="kc_rated_voltage">Rated Voltage : 5V 2A</string>
    <string name="kc_made_in_china">Made in China</string>
    <string name="kc_as_contact">AS Contact</string>
    <string name="kc_contact_number">031-689-4548</string>
</resources>