<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.jzzh.setting.device.DeviceIfoItem
        android:id="@+id/device_info_system_version"
        android:layout_marginTop="@dimen/activity_marginTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/device_info_system_version"/>

    <com.jzzh.setting.device.DeviceIfoItem
        android:id="@+id/device_info_android_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/device_info_android_version"/>

    <com.jzzh.setting.device.DeviceIfoItem
        android:id="@+id/device_info_model_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/device_info_model_number"/>

    <com.jzzh.setting.device.DeviceIfoItem
        android:id="@+id/device_info_serial_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/device_info_serial_number"/>

    <com.jzzh.setting.device.DeviceIfoItem
        android:id="@+id/device_info_battery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/device_info_battery"/>

    <com.jzzh.setting.device.DeviceIfoItem
        android:id="@+id/device_info_storage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/device_info_storage"/>

    <com.jzzh.setting.device.DeviceIfoItem
        android:id="@+id/device_info_sd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/device_info_sd"/>

    <com.jzzh.setting.device.DeviceIfoItem
        android:id="@+id/device_info_license"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:title="@string/device_info_license"/>

</LinearLayout>