<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="52dp"
        android:gravity="center_vertical"
        android:textSize="@dimen/textSize19"
        android:layout_marginTop="@dimen/activity_marginTop"
        android:text="@string/user_image_setting"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center_horizontal">

        <com.jzzh.setting.display.UserImageSettingItem
            android:id="@+id/user_image_fit_center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:describe="@string/user_image_fit_center"/>

        <com.jzzh.setting.display.UserImageSettingItem
            android:id="@+id/user_image_center_crop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="102dp"
            app:describe="@string/user_image_center_crop"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal">

        <com.jzzh.setting.display.UserImageSettingItem
            android:id="@+id/user_image_rotate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:describe="@string/user_image_rotate"/>

        <com.jzzh.setting.display.UserImageSettingItem
            android:id="@+id/user_image_rotate_reverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="102dp"
            app:describe="@string/user_image_rotate_reverse"/>

    </LinearLayout>

</LinearLayout>