<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.jzzh.setting.TitleLayout
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_marginTop"
        app:title="@string/light_setting"
        app:enable_checkBox="true"/>
    <com.jzzh.setting.light.AdjustLayout
        android:id="@+id/adjust_brightness"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/setting_light_warm"
        app:title="@string/light_brightness" />
    <com.jzzh.setting.light.AdjustLayout
        android:id="@+id/adjust_temperature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:icon="@drawable/setting_light_temperature"
        app:title="@string/light_color_temperature"/>
</LinearLayout>