<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="@dimen/zh_dialog_width"
    android:layout_height="wrap_content"
    android:background="@drawable/rectangle">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/textSize20"
        android:text="@string/factory_reset_dialog_msg"/>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp">

        <Button
            android:id="@+id/cancel"
            style="@style/DialogButtonStyle"
            android:text="@string/settings_cancel" />
        <Button
            android:id="@+id/ok"
            style="@style/DialogButtonStyle"
            android:layout_marginLeft="30dp"
            android:text="@string/settings_ok" />
    </LinearLayout>

</LinearLayout>